--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
     <script type="text/javascript" src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/sweetalert-master/dist/sweetalert-dev.js"></script>
 
-	<!-- <script src="phonegap.js"></script> -->
+	<script src="phonegap.js"></script>
 </body>
 </html>
